// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QuickAmounts renders a button for every provided amount 1`] = `
<View
  style={
    {
      "backgroundColor": "#f3f5f9",
      "paddingVertical": 12,
    }
  }
>
  <RCTScrollView
    contentContainerStyle={
      {
        "paddingLeft": 25,
        "paddingRight": 25,
      }
    }
    horizontal={true}
    showsHorizontalScrollIndicator={false}
  >
    <View>
      <TouchableOpacity
        accessibilityRole="button"
        accessible={true}
        onPress={[Function]}
        style={
          {
            "borderColor": "#b7bbc8",
            "borderRadius": 999,
            "borderWidth": 1,
            "flexDirection": "row",
            "justifyContent": "center",
            "marginRight": 5,
            "minWidth": 78,
            "padding": 7,
          }
        }
      >
        <Text
          style={
            [
              {
                "color": "#121314",
                "fontFamily": "CentraNo1-Book",
                "fontSize": 30,
                "fontWeight": "400",
                "marginVertical": 2,
              },
              {
                "textAlign": "center",
              },
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              {
                "color": "#686e7d",
              },
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              {
                "fontSize": 12,
              },
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              {
                "marginVertical": 0,
              },
              undefined,
            ]
          }
        >
          $100
        </Text>
      </TouchableOpacity>
      <TouchableOpacity
        accessibilityRole="button"
        accessible={true}
        onPress={[Function]}
        style={
          {
            "borderColor": "#b7bbc8",
            "borderRadius": 999,
            "borderWidth": 1,
            "flexDirection": "row",
            "justifyContent": "center",
            "marginRight": 5,
            "minWidth": 78,
            "padding": 7,
          }
        }
      >
        <Text
          style={
            [
              {
                "color": "#121314",
                "fontFamily": "CentraNo1-Book",
                "fontSize": 30,
                "fontWeight": "400",
                "marginVertical": 2,
              },
              {
                "textAlign": "center",
              },
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              {
                "color": "#686e7d",
              },
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              {
                "fontSize": 12,
              },
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              {
                "marginVertical": 0,
              },
              undefined,
            ]
          }
        >
          $200
        </Text>
      </TouchableOpacity>
      <TouchableOpacity
        accessibilityRole="button"
        accessible={true}
        onPress={[Function]}
        style={
          {
            "borderColor": "#b7bbc8",
            "borderRadius": 999,
            "borderWidth": 1,
            "flexDirection": "row",
            "justifyContent": "center",
            "marginRight": 5,
            "minWidth": 78,
            "padding": 7,
          }
        }
      >
        <Text
          style={
            [
              {
                "color": "#121314",
                "fontFamily": "CentraNo1-Book",
                "fontSize": 30,
                "fontWeight": "400",
                "marginVertical": 2,
              },
              {
                "textAlign": "center",
              },
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              {
                "color": "#686e7d",
              },
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              {
                "fontSize": 12,
              },
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              {
                "marginVertical": 0,
              },
              undefined,
            ]
          }
        >
          100%
        </Text>
      </TouchableOpacity>
    </View>
  </RCTScrollView>
</View>
`;

exports[`QuickAmounts renders the sparkle icon for the full native sell amount 1`] = `
<View
  style={
    {
      "backgroundColor": "#f3f5f9",
      "paddingVertical": 12,
    }
  }
>
  <RCTScrollView
    contentContainerStyle={
      {
        "paddingLeft": 25,
        "paddingRight": 25,
      }
    }
    horizontal={true}
    showsHorizontalScrollIndicator={false}
  >
    <View>
      <TouchableOpacity
        accessibilityRole="button"
        accessible={true}
        onPress={[Function]}
        style={
          {
            "borderColor": "#b7bbc8",
            "borderRadius": 999,
            "borderWidth": 1,
            "flexDirection": "row",
            "justifyContent": "center",
            "marginRight": 5,
            "minWidth": 78,
            "padding": 7,
          }
        }
      >
        <Text
          style={
            [
              {
                "color": "#121314",
                "fontFamily": "CentraNo1-Book",
                "fontSize": 30,
                "fontWeight": "400",
                "marginVertical": 2,
              },
              {
                "textAlign": "center",
              },
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              {
                "color": "#686e7d",
              },
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              {
                "fontSize": 12,
              },
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              {
                "marginVertical": 0,
              },
              undefined,
            ]
          }
        >
          $100
        </Text>
      </TouchableOpacity>
      <TouchableOpacity
        accessibilityRole="button"
        accessible={true}
        onPress={[Function]}
        style={
          {
            "borderColor": "#b7bbc8",
            "borderRadius": 999,
            "borderWidth": 1,
            "flexDirection": "row",
            "justifyContent": "center",
            "marginRight": 5,
            "minWidth": 78,
            "padding": 7,
          }
        }
      >
        <Text
          style={
            [
              {
                "color": "#121314",
                "fontFamily": "CentraNo1-Book",
                "fontSize": 30,
                "fontWeight": "400",
                "marginVertical": 2,
              },
              {
                "textAlign": "center",
              },
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              {
                "color": "#686e7d",
              },
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              {
                "fontSize": 12,
              },
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              {
                "marginVertical": 0,
              },
              undefined,
            ]
          }
        >
          $200
        </Text>
      </TouchableOpacity>
      <TouchableOpacity
        accessibilityRole="button"
        accessible={true}
        onPress={[Function]}
        style={
          {
            "borderColor": "#b7bbc8",
            "borderRadius": 999,
            "borderWidth": 1,
            "flexDirection": "row",
            "justifyContent": "center",
            "marginRight": 5,
            "minWidth": 78,
            "padding": 7,
          }
        }
      >
        <SvgMock
          color="#686e7d"
          fill="currentColor"
          height={16}
          name="Sparkle"
          style={
            {
              "height": 16,
              "width": 16,
            }
          }
          width={16}
        />
        <Text
          style={
            [
              {
                "color": "#121314",
                "fontFamily": "CentraNo1-Book",
                "fontSize": 30,
                "fontWeight": "400",
                "marginVertical": 2,
              },
              {
                "textAlign": "center",
              },
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              {
                "color": "#686e7d",
              },
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              {
                "fontSize": 12,
              },
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              {
                "marginVertical": 0,
              },
              undefined,
            ]
          }
        >
          100%
        </Text>
      </TouchableOpacity>
    </View>
  </RCTScrollView>
</View>
`;
